Make nickname input more visible. Fix open container close icon position.

--- a/src/components/Gameplay/NicknameForm/NicknameForm.scss
+++ b/src/components/Gameplay/NicknameForm/NicknameForm.scss
@@ -46,6 +46,7 @@
           padding: 0 35px 0 5px;
           border-bottom: 1px solid $purple;
           font-size: 23px;
+          outline: auto;
 
           color: $yellow;
           text-shadow: $text-shadow-prime;
